# fixed-income-2023b

./: README.md  pyproject.toml
fixed_income_tools/discount/: __init__.py  discount.py
fixed_income_tools/interest/: __init__.py  bond.py  interest.py
fixed_income_tools/repo/: repo.py
lecture_notes/: Fixed_income.aux  Fixed_income.out  Fixed_income.tex  Fixed_income.toc
python_exercises/: Ex_2_num_4.ipynb  Untitled.ipynb  ex_1_num_4.py  ex_2_num_4.py
python_exercises/data/: usyields.csv
